--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
   "devDependencies": {
     "browserify": "^16.2.2",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.4.0",
     "gulp-typescript": "^4.0.2",
+    "gulp-util": "^3.0.8",
     "tsify": "^4.0.0",
     "typescript": "^2.8.3",
-    "vinyl-source-stream": "^2.0.0"
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^3.11.0"
   }
 }
