--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "files": [
-        "src/main.ts",
-        "src/greet.ts"
+        "src/*.ts",
+        "src/**/*.ts"
     ],
     "compilerOptions": {
         "module": "commonjs",
